# all-my-repos

./: .pre-commit-config.yaml  1-bug-report.yml  2-feature-request.yml  all-repos-gatsby.json  all-repos-python.json  all-repos.json  config.yml  django_versions_add.py  drop_django_versions.py  poetry_upgrade.py  pyproject.toml  python_versions_add.py  python_versions_drop.py  renovate.json  run_fix.py
.github/workflows/: poetry-upgrade.yml
