[tool.poetry]
name = "bulk-update"
version = "0.1.0"
description = "To run all-repos"
authors = ["Bruno Alla <alla.brunoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
all-repos = "^1.21"
all-repos-envvar = "^0.2"
tomli = "^2.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
